--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "summernote-webpack": "^0.8.1"
+        "@fortawesome/fontawesome-free": "^5.5.0",
+        "summernote-webpack": "^0.8.1",
+        "sweetalert2": "^7.29.0"
     }
 }
